--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="images/logo.jpg"></a>
+            <a href="index.html"><img src="logo.jpg"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -38,7 +38,7 @@
                 <a href=""class="hero-btn red-btn"> EXPLORE NOW</a>
             </div>
             <div class="about-col">
-                 <img src="images/download.jpg">
+                 <img src="download.jpg">
             </div>
         </div>
         
