--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="images/logo.jpg"></a>
+            <a href="index.html"><img src="logo.jpg"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -33,7 +33,7 @@
     
     <div class="row">
         <div class="blog-left">
-            <img src="images/OIP%20(11).jpg">
+            <img src="OIP%20(11).jpg">
             <h2> Our Certificate & Online Program For 2021</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquet turpis nulla, eleifend faucibus est sollicitude ut. Maecenas ut venenatis ex, et dapibus purus. Donec sit amet nisl non justo malesuada fermentum. Donec eget felis dolor. Suspendisse condimentum vestibulum ex ac cursus.</p>
             <br>
