--- a/course.html
+++ b/course.html
@@ -11,7 +11,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="images/logo.jpg"></a>
+            <a href="index.html"><img src="logo.jpg"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -58,17 +58,17 @@
        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
        <div class="row">
             <div class="facilities-col">
-                <img src="images/OIP%20(4).jpg">
+                <img src="OIP%20(4).jpg">
                  <h3>World Class Library</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elite. Pellentesque aliquet turpis nulla.</p>
                 </div>
             <div class="facilities-col">
-                <img src="images/OIP%20(5).jpg">
+                <img src="OIP%20(5).jpg">
                  <h3>Largest Play Ground</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elite. Pellentesque aliquet turpis nulla.</p>
                 </div>
             <div class="facilities-col">
-                <img src="images/OIP%20(6).jpg">
+                <img src="OIP%20(6).jpg">
                  <h3>Tasty and Healthy Food</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elite. Pellentesque aliquet turpis nulla.</p>
          </div> 
